--- a/app/views/directive_templates/_form.html.erb
+++ b/app/views/directive_templates/_form.html.erb
@@ -11,7 +11,8 @@
           <dt><%=resource_class.human_attribute_name :alias %></dt>
           <dd><%=f.text_field :alias %></dd>
           <dt><%=resource_class.human_attribute_name :name %></dt>
-          <dd><%=f.text_area :name, rows: 10, wrap: 'virtual', value: (resource.name||'').gsub(/ && /, "\n") %></dd>
+          <dd><%=f.text_area :name, value: (resource.name||'').gsub(/ && /, "\n"),
+            rows: 10, wrap: 'virtual',placeholder: '用户可以输入多行，但是系统会自动将这些命令行用 && 连接，因此执行时将被视为一行脚本' %></dd>
           <dt>
           <%=f.submit '提交' %>
           <input type="reset" value="取消"
