调整指令模型，支持系统任务介入运维平台
系统任务与之前的指令不同，它不是运行在目标机器上，而是直接由apposs平台进行操作，这个功能将能够使apposs平台进一步提高执行自动化任务的能力。

* 添加pluggable参数区分directive/directive_template中的系统任务
* 支持指令执行序列

    所谓指令序列，指的是指令之间将建立链接，这样，所有指令可以根据需要驱动后继指令或者了解前趋指令的执行情况。
    运维平台支持系统任务以后，对任务执行序列的判断方式有较大影响。
    在过去的做法中，同一个operation在一台机器上的指令只要按照id顺序就可以知道顺序。
    但是pluglet指令是在center平台上执行的，因此前趋和后继指令会形成一对多和多对一的链接关系。
    为了信息完备，我们添加了专门的记录字段 pre_id 和 next_id
    相应的，指令执行不再一次下传大量指令，而是每次执行只有一条，返回结果后再继续下发

* 我们以brakeman为例调试pluglet机制，已经通过验证
* 界面调整，支持对pluglet的显示
* 测试用例修改并通过验证

--- a/app/views/directives/_item.html.erb
+++ b/app/views/directives/_item.html.erb
@@ -1,4 +1,6 @@
-      <span style="float:left;color:green;width:40px"><%=resource.id %></span>
+      <span style="float:left;color:green;width:25px">
+        <i class="icon-hand-left" title="指令序号: <%=resource.id %>"></i>
+      </span>
       <span style="float:left" title="<%=resource.command_name %>">
         <%=resource.command_name[0..80] %>
       </span>
