--- a/app/views/machines/directives.js.erb
+++ b/app/views/machines/directives.js.erb
@@ -1,1 +1,1 @@
-$("#zone").html('<%= escape_javascript(render '/directives/collection', :collection => @directives.asc, :parent_id => params[:id]) %>');
+$("#zone").html('<%= escape_javascript(render '/directives/collection', :collection => @directives.id_asc, :parent_id => params[:id]) %>');
