分组操作界面调整，分离执行、分组和管理界面

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -44,6 +44,10 @@ li {
   line-height:15px;
 }
 
+.nav-tabs {
+  margin-bottom:2px;
+}
+
 .nav .nav-header {
   color: #A0A0A0;
   padding: 0;
@@ -55,8 +59,10 @@ li {
 }
 
 .table th, .table td{
-  padding: 2px 1px;
+  padding: 3px 1px;
   margin: 0;
+  border-top: 0;
+  border-bottom: 1px solid #ddd;
   vertical-align: middle;
 }
 
