--- a/app/views/operation_templates/_collection.html.erb
+++ b/app/views/operation_templates/_collection.html.erb
@@ -1,39 +1,72 @@
-            <ul class="nav nav-list">
-              <li class="nav-header">
-              <div class="span">
-                操作面板
-                <%=link_to ' ', app_operation_templates_path(parent.id), 
-                  remote: true, class: 'icon-refresh', title: '刷新' %>
-                </span>
+            <div class="tabbable" style="background-color:white">
+              <ul class="nav nav-tabs">
+                <li class="active"><a href="#tab1" data-toggle="tab">执行</a></li>
+                <li><a href="#tab2" data-toggle="tab">分组执行</a></li>
                 <% if current_user.is_pe? parent %>
-                  <%=link_to ' ', new_app_operation_template_path(parent.id), :remote => true, :class => 'pull-right icon-plus', :title => '新建操作' %>
+                  <li>
+                  <a href="#tab3" data-toggle="tab">管理</a>
+                  </li>
                 <% end %>
-              </li>
-            </ul>
-            <table table-striped="" class="table">
-            	<thead>
-            		<tr>
-            			<th></th>
-            			<th></th>
-            		</tr>
-              </thead>
-              <tbody>
-              <% current_user.owned_operation_templates(parent).each do |template|%>
-              	<tr>
-                  <td title="<%=template.name %>"><%=template.name[0..18] %></td>
-                  <td>
-                    <%=link_to "执行", execute_app_operation_template_path(parent.id,template.id), :form_to => 'execute_form', :data => {:confirm => "系统将执行操作：#{template.name} ，请确认"}, :class => 'btn btn-mini btn-primary' %>
-                    <%=link_to "分组执行", group_form_app_operation_template_path(parent.id,template.id), :remote => true, :class => 'btn btn-mini' %>
-                  </td>
-                  <td>
-                    <% if current_user.is_pe? parent %>
-                      <%=link_to raw('<i class="icon-pencil"></i>'), edit_app_operation_template_path(parent.id,template.id), :remote => true %>
-                      <%=link_to raw('<i class="icon-trash"></i>'), app_operation_template_path(parent.id,template.id), :remote => true,:method => :delete, :data => { :confirm => "确实要删除吗？" } %>
-                    <% end %>
-                    <%=link_to raw('<i class="icon-eye-open"></i>'), app_operation_template_path(parent.id,template.id), :remote => true, :title => '显示操作内容' %>
-                  </td>
-                </tr>
-              <% end %>
-              </tbody>
-            </table>
-
+                <li>
+                  <%=link_to ' ', app_operation_templates_path(parent.id), 
+                  remote: true, class: 'icon-refresh', title: '刷新' %>
+                </li>
+              </ul>
+              <div class="tab-content">
+                <div class="tab-pane active" id="tab1">
+                  <table class="table table-hover">
+                    <tbody>
+                      <% current_user.owned_operation_templates(parent).each do |template|%>
+                        <tr>
+                          <td title="<%=template.name %>"><%=template.name[0..18] %></td>
+                          <td>
+                            <%=link_to "执行", execute_app_operation_template_path(parent.id,template.id), :form_to => 'execute_form', :data => {:confirm => "系统将执行操作：#{template.name} ，请确认"}, :class => 'btn btn-primary' %>
+                            <%=link_to raw('<i class="icon-eye-open"></i>'), app_operation_template_path(parent.id,template.id), :remote => true, :title => '显示操作内容' %>
+                          </td>
+                        </tr>
+                      <% end %>
+                    </tbody>
+                  </table>
+                </div>
+                <div class="tab-pane" id="tab2">
+                  <table class="table table-hover">
+                    <tbody>
+                      <% current_user.owned_operation_templates(parent).each do |template|%>
+                        <tr>
+                          <td title="<%=template.name %>"><%=template.name[0..18] %></td>
+                          <td>
+                            <%=link_to "分组", group_form_app_operation_template_path(parent.id,template.id), :remote => true, :class => 'btn' %>
+                            <%=link_to raw('<i class="icon-eye-open"></i>'), app_operation_template_path(parent.id,template.id), :remote => true, :title => '显示操作内容' %>
+                          </td>
+                        </tr>
+                      <% end %>
+                    </tbody>
+                  </table>
+                </div>
+                <% if current_user.is_pe? parent %>
+                  <div class="tab-pane" id="tab3">
+                    <table class="table table-hover">
+                      <thead>
+                        <tr>
+                          <th colspan="2">
+                                           <%=link_to '新建操作', new_app_operation_template_path(parent.id), :remote => true, :class => 'pull-right icon-plus', :title => '新建操作' %>
+ </td>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <% current_user.owned_operation_templates(parent).each do |template|%>
+                          <tr>
+                            <td title="<%=template.name %>"><%=template.name[0..18] %></td>
+                            <td>
+                              <%=link_to raw('<i class="icon-pencil"></i>'), edit_app_operation_template_path(parent.id,template.id), :remote => true %>
+                              <%=link_to raw('<i class="icon-trash"></i>'), app_operation_template_path(parent.id,template.id), :remote => true,:method => :delete, :data => { :confirm => "确实要删除吗？" } %>
+                              <%=link_to raw('<i class="icon-eye-open"></i>'), app_operation_template_path(parent.id,template.id), :remote => true, :title => '显示操作内容' %>
+                            </td>
+                          </tr>
+                        <% end %>
+                      </tbody>
+                    </table>
+                  </div>
+                <% end %>
+              </div>
+            </div>
