--- a/app/views/operation_templates/_collection.html.erb
+++ b/app/views/operation_templates/_collection.html.erb
@@ -18,10 +18,11 @@
                     <tbody>
                       <% current_user.owned_operation_templates(parent).each do |template|%>
                         <tr>
-                          <td title="<%=template.name %>"><%=template.name[0..18] %></td>
+                          <td title="<%=template.name %>">
+                            <%=link_to template.name[0..18], app_operation_template_path(parent.id,template.id), :remote => true, :title => '显示操作内容' %>
+                          </td>
                           <td>
                             <%=link_to "执行", execute_app_operation_template_path(parent.id,template.id), :form_to => 'execute_form', :data => {:confirm => "系统将执行操作：#{template.name} ，请确认"}, :class => 'btn btn-primary' %>
-                            <%=link_to raw('<i class="icon-eye-open"></i>'), app_operation_template_path(parent.id,template.id), :remote => true, :title => '显示操作内容' %>
                           </td>
                         </tr>
                       <% end %>
@@ -33,10 +34,11 @@
                     <tbody>
                       <% current_user.owned_operation_templates(parent).each do |template|%>
                         <tr>
-                          <td title="<%=template.name %>"><%=template.name[0..18] %></td>
+                          <td title="<%=template.name %>">
+                            <%=link_to template.name[0..18], app_operation_template_path(parent.id,template.id), :remote => true, :title => '显示操作内容' %>
+                          </td>
                           <td>
                             <%=link_to "分组", group_form_app_operation_template_path(parent.id,template.id), :remote => true, :class => 'btn' %>
-                            <%=link_to raw('<i class="icon-eye-open"></i>'), app_operation_template_path(parent.id,template.id), :remote => true, :title => '显示操作内容' %>
                           </td>
                         </tr>
                       <% end %>
@@ -49,18 +51,19 @@
                       <thead>
                         <tr>
                           <th colspan="2">
-                                           <%=link_to '新建操作', new_app_operation_template_path(parent.id), :remote => true, :class => 'pull-right icon-plus', :title => '新建操作' %>
- </td>
+                            <%=link_to '新建操作', new_app_operation_template_path(parent.id), :remote => true, :class => 'pull-right icon-plus', :title => '新建操作' %>
+                          </td>
                         </tr>
                       </thead>
                       <tbody>
                         <% current_user.owned_operation_templates(parent).each do |template|%>
                           <tr>
-                            <td title="<%=template.name %>"><%=template.name[0..18] %></td>
+                            <td title="<%=template.name %>">
+                            <%=link_to template.name[0..18], app_operation_template_path(parent.id,template.id), :remote => true, :title => '显示操作内容' %>
+                            </td>
                             <td>
                               <%=link_to raw('<i class="icon-pencil"></i>'), edit_app_operation_template_path(parent.id,template.id), :remote => true %>
                               <%=link_to raw('<i class="icon-trash"></i>'), app_operation_template_path(parent.id,template.id), :remote => true,:method => :delete, :data => { :confirm => "确实要删除吗？" } %>
-                              <%=link_to raw('<i class="icon-eye-open"></i>'), app_operation_template_path(parent.id,template.id), :remote => true, :title => '显示操作内容' %>
                             </td>
                           </tr>
                         <% end %>
