UI界面初步重构，整合日常功能的信息，分离管理类功能

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -53,9 +53,19 @@ li {
   padding: 0;
 }
 
-.well {
-  padding: 3px;
+.well-large, .well {
+  padding: 8px;
   margin-bottom: 8px;
+  background-color: white;
+  border: 0px;
+  margin-bottom: 5px;
+  box-shadow:none;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+}
+
+.panel {
+  background-color: #ccc;
 }
 
 .table th, .table td{
