--- a/app/views/machines/index.js.erb
+++ b/app/views/machines/index.js.erb
@@ -1,1 +1,1 @@
-$("#machines").html('<%= escape_javascript(render "/machines/collection", :app => App.find(params[:app_id])) %>');
+$("#container").html('<%= escape_javascript(render 'collection') %>');
