--- a/app/views/machines/_collection.html.erb
+++ b/app/views/machines/_collection.html.erb
@@ -18,8 +18,7 @@
                 <th>地址</th>
                 <th>登录用户</th>
                 <th>端口</th>
-                <th>分组</th>
-                <th>&nbsp;</th>
+                <th colspan="3">分组</th>
             	</tr>
             </thead>
             <tbody>
