--- a/app/views/machines/change_env.js.erb
+++ b/app/views/machines/change_env.js.erb
@@ -1,2 +1,2 @@
 info('分配机器环境：<%="#{@machine.name} - #{@machine.env.name}" %>');
-$("#machines_<%=@machine.id %>").html('<%= escape_javascript(render "/machines/item", machine: @machine) %>');
+$("#machines_<%=@machine.id %>").html('<%= escape_javascript(render "item", machine: @machine) %>');
