--- a/app/views/directive_templates/_form.html.erb
+++ b/app/views/directive_templates/_form.html.erb
@@ -9,15 +9,16 @@
         <legend><%=resource.new_record? ? "新增" : "修改"%><%=resource_class.model_name.human %></legend>
         <dl class="dl-horizontal">
           <dt><%=resource_class.human_attribute_name :alias %></dt>
-          <dd><%=f.text_field :alias %></dd>
+          <dd><%=f.text_field :alias, class: 'span9' %></dd>
           <dt><%=resource_class.human_attribute_name :name %></dt>
-          <dd><%=f.text_area :name, value: (resource.name||'').gsub(/ && /, "\n"),style: 'width:450px', 
-            rows: 10, wrap: 'virtual',placeholder: '用户可以输入多行，但是系统会自动将这些命令行用 && 连接，因此执行时将被视为一行脚本' %></dd>
+          <dd><%=f.text_area :name, value: (resource.name||'').gsub(/ && /, "\n"), class: 'span9' ,
+            rows: 10, wrap: 'virtual',placeholder: '用户可以输入多行，但是系统会自动将这些命令行用 && 连接，执行时将被shell看成一行脚本' %></dd>
           <dt>
-          <%=f.submit '提交' %>
-          <input type="reset" value="取消"
-          onclick="$('#main_list fieldset').fadeOut(100);" />
-          </dt><dd>&nbsp;</dd>
+            <%=f.submit '提交' %>
+          </dt>
+          <dd>
+            <input type="reset" value="取消" onclick="$('#main_list fieldset').fadeOut(100);" />
+          </dd>
         </dl>
   <% end %>
 
