--- a/app/views/directive_templates/index.js.erb
+++ b/app/views/directive_templates/index.js.erb
@@ -1,2 +1,3 @@
-$("#zone").html('<%= escape_javascript(render "collection", :collection => current_user.directive_templates) %>');
-
+$("#main").html('<%= escape_javascript(render "collection") %>');
+typeahead("input[data-provide]");
+$("#app_nav li").removeClass("active");
