迁移管理员授权管理

--- a/app/views/machines/index.js.erb
+++ b/app/views/machines/index.js.erb
@@ -1,2 +1,5 @@
 $("#container").html('<%= escape_javascript(render 'collection') %>');
+$("#menu li").removeClass("active");
+$("#m_machines").addClass("active");
 typeahead("input[data-provide]");
+
