--- a/app/views/ops/index.js.erb
+++ b/app/views/ops/index.js.erb
@@ -1,3 +1,2 @@
-$("#zone").html('<%= escape_javascript(
-  render 'collection', :collection => collection, :parent_id => params[:app_id]
-) %>');
+$("#zone").html('<%= escape_javascript( render 'collection' ) %>');
+typeahead("input[data-provide]");
