--- a/app/views/apps/_app.html.erb
+++ b/app/views/apps/_app.html.erb
@@ -7,8 +7,8 @@
             <li id="m_machines">
             <%=link_to '服务器管理', machines_path, remote: true %>
             </li>
-            <li id="m_operations">
-            <%=link_to '操作列表', operations_app_path(app), remote: true %>
+            <li id="m_permissions">
+            <%=link_to '操作员授权管理', ops_app_path(app), remote: true %>
             </li>
           <% end %>
         </ul>
