--- a/app/views/apps/intro.js.erb
+++ b/app/views/apps/intro.js.erb
@@ -1,2 +1,3 @@
 $("#container").html('<%= escape_javascript(render('intro', app: @app)) %>');
-
+$("#menu li").removeClass("active");
+$("#m_intro").addClass("active");
