--- a/app/views/ops/_form.html.erb
+++ b/app/views/ops/_form.html.erb
@@ -1,14 +1,15 @@
 <%= form_for(resource,
     :as => "#{resource_instance_name.to_s.downcase}",
-    :url => app_ops_path(params[:app_id]),
+    :url => ops_path(resource),
     :html => { 
       :method => "post",
-      :class => 'form-inline'
+      :class => 'well form-horizontal'
     },
     :remote => true) do|f| %>
       <div class="errors"></div>
       用户帐号（注册邮箱）
-      <%=f.autocomplete_field :email, search_autocomplete_user_email_path %>
+      <%=f.text_field :email, 'data-provide' => 'typeahead', 'data-link' => '/search/user_by_email', 
+        :autocomplete => 'off' %>
       <%=f.submit '提交' %>
       <input type="reset" value="取消" onclick="$('#ops .form').fadeOut(100);" />
 <% end %>
