--- a/app/views/ops/create.js.erb
+++ b/app/views/ops/create.js.erb
@@ -1,8 +1,7 @@
 <% if @error %>
-  msg('<ul class="errors"><%=@error %></ul>');
+  msg('<ul class="errors"><%= escape_javascript(@error) %></ul>');
 <% else %>
   info("保存成功！");
-  $("#zone").html('<%= escape_javascript(
-  render 'collection', :collection => current_app.ops, :parent_id => current_app.id
-) %>');
+  $("#zone").html('<%= escape_javascript( render 'collection' ) %>');
+  typeahead("input[data-provide]");
 <% end %>
