--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,21 +1,23 @@
 @import "twitter/bootstrap/bootstrap";
-body { padding-top: 60px; }
-
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
-@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
-@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
+@iconSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings");
+@iconWhiteSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings-white");
 
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
-@fontAwesomeEotPath: asset-path('fontawesome-webfont.eot');
-@fontAwesomeWoffPath: asset-path('fontawesome-webfont.woff');
-@fontAwesomeTtfPath: asset-path('fontawesome-webfont.ttf');
-@fontAwesomeSvgzPath: asset-path('fontawesome-webfont.svgz');
-@fontAwesomeSvgPath: asset-path('fontawesome-webfont.svg');
+// Note: If you use asset_path() here, your compiled boostrap_and_overrides.css will not
+//       have the proper paths. So for now we use the absolute path.
+@fontAwesomeEotPath: asset-path("fontawesome-webfont.eot");
+@fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff");
+@fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf");
+@fontAwesomeSvgPath: asset-path("fontawesome-webfont.svg");
 
 // Font Awesome
 @import "fontawesome";
+
+// Glyphicons
+//@import "twitter/bootstrap/sprites.less";
 
 // Your custom LESS stylesheets goes here
 //
@@ -23,31 +25,34 @@ body { padding-top: 60px; }
 // you may use and inherit here
 //
 // If you'd like to override bootstrap's own variables, you can do so here as well
-// See http://twitter.github.com/bootstrap/less.html for their names and documentation
+// See http://twitter.github.com/bootstrap/customize.html#variables for their names and documentation
 //
 // Example:
 // @linkColor: #ff0000;
-body {
-  padding-top: 0;
-  font-family: arial, sans-serif;
-}
 
 label.inline, label.inline input, label.inline textarea, label.inline select {
   display: inline;
-}
-
-.navbar .nav > li > a {
-  padding: 6px 5px 8px;
-}
-
-li {
-  line-height:15px;
 }
 
 .nav-tabs {
   margin-bottom:2px;
 }
 
+.navbar {
+  margin-bottom: 10px;
+}
+
+.navbar-inner {
+  min-height: 0;
+}
+
+.navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {
+  padding: 4px 7px;
+}
+
+.navbar .nav > li > a {
+  padding: 4px 7px;
+}
 .nav .nav-header {
   color: #A0A0A0;
   padding: 0;
@@ -121,3 +126,4 @@ select[multiple], select[size] {
   float: left;
   margin-left: 0px;
 }
+
