--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Apposs" %></title>
     <%= csrf_meta_tags %>
@@ -10,41 +11,52 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
-        <!-- Javascripts
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <%= javascript_include_tag "application" %>
-  
+
     <%= stylesheet_link_tag "application", :media => "all" %>
 
-    <link href="/images/favicon.ico" rel="shortcut icon">
-    <link href="/images/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="/images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
-    <link href="/images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
+    <!-- For third-generation iPad with high-resolution Retina display: -->
+    <!-- Size should be 144 x 144 pixels -->
+    <%= favicon_link_tag 'images/apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
+
+    <!-- For iPhone with high-resolution Retina display: -->
+    <!-- Size should be 114 x 114 pixels -->
+    <%= favicon_link_tag 'images/apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
+
+    <!-- For first- and second-generation iPad: -->
+    <!-- Size should be 72 x 72 pixels -->
+    <%= favicon_link_tag 'images/apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
+
+    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+    <!-- Size should be 57 x 57 pixels -->
+    <%= favicon_link_tag 'images/apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
+
+    <!-- For all other devices -->
+    <!-- Size should be 32 x 32 pixels -->
+    <%= favicon_link_tag 'images/favicon.ico', :rel => 'shortcut icon' %>
   </head>
   <body>
-    <div class="navbar navbar-top">
+
+    <div class="navbar navbar-fluid-top">
       <div class="navbar-inner">
-        <div class="container">
+        <div class="container-fluid">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
           <div class="container-fluid nav-collapse">
-            <div class="span10">
               <ul id="app_nav" class="nav">
-                <li style="margin:8px 8px">应用 <i class="icon-arrow-right"></i></li>
+                <li style="margin:4px">应用 <i class="icon-arrow-right"></i></li>
                 <% current_user.apps.order('name').uniq.each_with_index{|app,index| %>
-                  <li id="app_nav_<%=app.id %>"><%=link_to app, app_path(app),:remote => true %></li>
+                  <li id="app_nav_<%=app.id %>" <%=index==0 ? 'class=active' : '' %> >
+                    <%=link_to app, app_path(app),:remote => true %>
+                  </li>
                 <% } %>
               </ul>
-
-            </div>
-            <div class="span pull-right">
-              <i class="icon-user"></i> 欢迎 <%= current_user.email.split('@')[0] %><br />
-            		<%= link_to "管理我的指令", directive_templates_path, :remote => true %>
-            </div>
+              <div class="span2 pull-right" style="margin:4px">
+                <i class="icon-user"></i> 欢迎 <%= current_user.email.split('@')[0] %>
+                <%= link_to "管理我的指令", directive_templates_path, :remote => true %>
+              </div>
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -55,9 +67,12 @@
       <footer>
       <p>&copy; Company 2012</p>
       </footer>
-    </div><!--/row-->
+    </div> <!-- /container -->
 
-  </div> <!-- /container -->
+    <!-- Javascripts
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <%= javascript_include_tag "application" %>
 
-</body>
+  </body>
 </html>
