--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -74,7 +74,7 @@ label.inline, label.inline input, label.inline textarea, label.inline select {
 }
 
 .table th, .table td{
-  padding: 3px 1px;
+  padding: 1px;
   margin: 0;
   border-top: 0;
   border-bottom: 1px solid #ddd;
