添加editable支持，支持PE修改ssh登录用户

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -43,11 +43,12 @@ label.inline, label.inline input, label.inline textarea, label.inline select {
 }
 
 .navbar-inner {
+  padding-left: 0;
   min-height: 0;
 }
 
 .navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {
-  padding: 4px 7px;
+  padding: 5px 7px;
 }
 
 .navbar .nav > li > a {
