--- a/app/views/machines/create.js.erb
+++ b/app/views/machines/create.js.erb
@@ -4,4 +4,5 @@
   info("保存成功！");
   $("#container").html('<%= escape_javascript(render 'collection') %>');
   typeahead("input[data-provide]");
+  editable('<%=change_user_machines_path %>', '输入登录用户');
 <% end %>
