--- a/app/views/machines/destroy.js.erb
+++ b/app/views/machines/destroy.js.erb
@@ -1,5 +1,6 @@
+<% if @result %>
+  info("服务器已删除！");
+<% end %>
 $("#container").html('<%= escape_javascript(render 'collection') %>');
-$("#menu li").removeClass("active");
-$("#m_machines").addClass("active");
 typeahead("input[data-provide]");
 editable('<%=change_user_machines_path %>', '输入登录用户');
