--- a/app/views/apps/machines.js.erb
+++ b/app/views/apps/machines.js.erb
@@ -1,2 +1,2 @@
-$("#container").html('<%= escape_javascript(render('machines')) %>');
+$("#machines").html('<%= escape_javascript(render('machines')) %>');
 
