--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <div class="container-fluid nav-collapse">
+          <div class="nav-collapse">
               <ul id="app_nav" class="nav">
                 <li style="margin:4px">应用 <i class="icon-arrow-right"></i></li>
                 <% current_user.apps.order('name').uniq.each_with_index{|app,index| %>
