--- a/app/views/machines/_collection.html.erb
+++ b/app/views/machines/_collection.html.erb
@@ -18,12 +18,13 @@
                 <th>地址</th>
                 <th>登录用户</th>
                 <th>端口</th>
-                <th colspan="4">分组</th>
+                <th>分组设定</th>
+                <th colspan="3">其它管理</th>
             	</tr>
             </thead>
             <tbody>
             <% current_user.owned_machines(current_app).each do |machine| %>
-              <tr id="machines_<%=machine.id %>">
+              <tr id="machines_<%=machine.id %>" box-href="<%=item_machine_path(machine) %>">
                 <%=render 'item', :machine => machine %>
               </tr>
             <% end %>
