--- a/app/views/machines/change_app.js.erb
+++ b/app/views/machines/change_app.js.erb
@@ -2,4 +2,5 @@
   info("<%='机器 %s 现在属于 %s ！' % [@machine.name, @app.name] %>");
   $("#container").html('<%= escape_javascript(render 'collection') %>');
   typeahead("input[data-provide]");
+  editable('<%=change_user_machines_path %>', '输入登录用户');
 <% end %>
