--- a/app/views/machines/clean_all.js.erb
+++ b/app/views/machines/clean_all.js.erb
@@ -1,3 +1,3 @@
 info('生成<%=@directive.command_name %>指令');
-$("#machines_<%=@machine.id %>").html('<%= escape_javascript(render "/machines/item", :machine => @machine, :app => @machine.app) %>');
-
+$("#machines_<%=@machine.id %>").trigger('refresh.application');
+editable('<%=change_user_machines_path %>', '输入登录用户');
