基本功能升级
支持切换网络域
调整refresh公共函数，支持对js后缀的地址使用eval方式调用
service controller中自动设定locked为true

--- a/app/views/apps/_machines.html.erb
+++ b/app/views/apps/_machines.html.erb
@@ -23,7 +23,7 @@
                 </thead>
                 <tbody id="machines">
                 <% current_user.owned_machines(current_app).each{|machine|%>
-                  <tr id="machines_<%=machine.id %>" box-href="<%=app_item_machine_path(machine) %>">
+                  <tr id="machines_<%=machine.id %>" box-href="<%=app_item_machine_path(machine,:format => 'js') %>">
                     <%=render '/machines/app_item', :machine => machine %>
                   </tr>
               <% }%>
