模糊搜索功能调整，最小输入为两个字母，仅查询当前用户所负责的应用

--- a/app/views/machines/_item.html.erb
+++ b/app/views/machines/_item.html.erb
@@ -74,7 +74,7 @@
                       <input name="name" type='text' 
                         class="input-medium"
                         data-provide="typeahead" 
-                        data-link="/search/app_by_name" 
+                        data-link="/search/app_by_name_and_user" 
                         autocomplete="off"
                         placeholder="填入要分配的应用名" />
                       <%=f.submit '更改应用', class: 'btn' %>
