--- a/app/views/machines/_item.html.erb
+++ b/app/views/machines/_item.html.erb
@@ -59,7 +59,7 @@
                 <td>
                   <% if machine.locked? %>
                     <strong>手工维护，忽略自动同步
-                      <%=link_to '取消', unlock_machine_path(machine), remote: true, method: :put, :class => 'btn btn-small btn-inverse', :title => '单击取消手工维护状态，转为系统自动维护', :data => {:confirm => '本操作不可恢复，确定要由系统自动维护吗？'}  %>
+                      <%=link_to '取消', unlock_machine_path(machine), remote: true, method: :put, :class => 'btn btn-small btn-inverse', :title => '单击取消手工维护状态，转为系统自动维护', :data => {:confirm => '本操作不可恢复，确定要由系统自动维护吗？'} unless current_app.locked? %>
                       <%=link_to '删除', machine_path(machine), remote: true, method: :delete, :class => 'btn btn-small btn-danger', :title => '单击删除本服务器，不可恢复', :data => {:confirm => '本操作不可恢复，确定要删除吗？'} %>
                     </strong>
                   <% end %>
