--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -114,6 +114,19 @@ label.inline, label.inline input, label.inline textarea, label.inline select {
   margin: 0;
 }
 
+#loading {
+  position: fixed;
+  left: 0;
+  right: 0;
+  width: 80px;
+  padding: 4px 0;
+  margin: 2px 0;
+  background-color: #F9EDBE;
+  z-index: 1;
+  font-weight: bolder;
+  display: none;
+}
+
 dt,dd {
   padding: 4px 0;
 }
