--- a/app/views/apps/old_operations.js.erb
+++ b/app/views/apps/old_operations.js.erb
@@ -1,2 +1,3 @@
-$("#zone").html('<%= escape_javascript(render "/operations/collection", :parent => @app, :collection => @collection, :history => true ) %>');
-
+$("#operations > div").html('<%= escape_javascript(render "/operations/collection_body", :collection => @collection ) %>');
+$("#operations ul li").removeClass("active");
+$("#operations ul li.history").addClass("active");
