--- a/app/views/apps/operations.js.erb
+++ b/app/views/apps/operations.js.erb
@@ -1,2 +1,3 @@
-$("#zone").html('<%= escape_javascript(render "/operations/collection", :parent => @app ) %>');
-
+$("#operations > div").html('<%= escape_javascript(render "/operations/collection_body", :collection => @collection ) %>');
+$("#operations ul li").removeClass("active");
+$("#operations ul li.current").addClass("active");
