--- a/app/views/operation_templates/_collection.html.erb
+++ b/app/views/operation_templates/_collection.html.erb
@@ -1,4 +1,4 @@
-            <div class="tabbable" style="background-color:white">
+            <div class="tabbable">
               <ul class="nav nav-tabs">
                 <li class="active"><a href="#tab1" data-toggle="tab">执行</a></li>
                 <li><a href="#tab2" data-toggle="tab">分组执行</a></li>
