对比内部版本代码，同步所有文件

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
                   </li>
                 <% } %>
               </ul>
-              <div class="span2 pull-right" style="margin:4px">
+              <div class="pull-right" style="margin:4px 0">
                 <i class="icon-user"></i> 欢迎 <%= current_user.email.split('@')[0] %>
                 <%= link_to "管理我的指令", directive_templates_path, :remote => true %>
               </div>
